--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-01-12  Richard Henderson  <rth@redhat.com>
 
+	* doc/invoke.texi: Update Alpha options.
+
 	* doc/invoke.texi: Update i386 built-in function lists.
 
 Sat Jan 12 17:38:11 CET 2002  Jan Hubicka  <jh@suse.cz>
