* Makefile.in: Rebuilt. 	* Makefile.am (AUTOMAKE_OPTIONS): New macro.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48818 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/fastjar/ChangeLog
+++ b/fastjar/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-11  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (AUTOMAKE_OPTIONS): New macro.
+
 2002-01-09  Tom Tromey  <tromey@redhat.com>
 
 	For PR libgcj/5303:
