* doc/install.texi (Binaries): Make link to ftp.writtenword.com 	more generic.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48819 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-13  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/install.texi (Binaries): Make link to ftp.writtenword.com
+	more generic.
+
 Sun Jan 13 07:23:01 2002  Douglas B Rupp  <rupp@gnat.com>
 
 	* Makefile.in (LIB2FUNCS): Split into LIB2FUNCS_1 and LIB2FUNCS_2.
