--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-13  Richard Henderson  <rth@redhat.com>
+
+	* reload.c (find_reloads): Use a hard reg destination as reload reg
+	for an input reload of the source.
+
 2002-01-13  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* doc/install.texi (Binaries): Make link to ftp.writtenword.com
