* config/alpha/alpha.c (alpha_expand_mov): Don't call 	alpha_legitimize_address unless mode is Pmode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48827 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan 14 07:08:55 2002  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* config/alpha/alpha.c (alpha_expand_mov): Don't call
+	alpha_legitimize_address unless mode is Pmode.
+
 2002-01-13  Geoffrey Keating  <geoffk@redhat.com>
 
 	* doc/md.texi (Modifiers): Document the '*' constraint for the
