* cfgcleanup.c (try_forward_edges): Avoid infinite loop at infinite 	threaded loop.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48837 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jan 14 20:18:19 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (try_forward_edges): Avoid infinite loop at infinite
+	threaded loop.
+
 2002-01-14  Tom Rix  <trix@redhat.com>
 
 	* config/rs6000/rs6000.md: Fix typo with sradi.
