* doc/invoke.texi (Xstormy16 Options): Add xstormy16 option. 	* doc/md.texi (Machine Constraints): Use @minus{} where appropriate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48838 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-14  Geoffrey Keating  <geoffk@redhat.com>
+
+	* doc/invoke.texi (Xstormy16 Options): Add xstormy16 option.
+	* doc/md.texi (Machine Constraints): Use @minus{} where appropriate.
+
 Mon Jan 14 20:18:19 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfgcleanup.c (try_forward_edges): Avoid infinite loop at infinite
