* doc/extend.texi: Move documentation of X86 built-in functions 	here. 	* doc/invoke.texi: From here. 	* doc/sourcebuild.texi: Document location of documentation for 	machine built-in functions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48842 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/sourcebuild.texi
+++ b/gcc/doc/sourcebuild.texi
@@ -692,9 +692,8 @@ enumerated in the manual.
 Documentation in @file{gcc/doc/extend.texi} for any target-specific
 pragmas supported.
 @item
-Documentation of any target-specific built-in functions supported.
-FIXME: where should this documentation be?  For MMX built-in functions
-it is currently in @file{gcc/doc/invoke.texi}.
+Documentation in @file{gcc/doc/extend.texi} of any target-specific
+built-in functions supported.
 @item
 Documentation in @file{gcc/doc/md.texi} of any target-specific
 constraint letters (@pxref{Machine Constraints, , Constraints for
